fixing background image

--- a/journey/src/index.css
+++ b/journey/src/index.css
@@ -10,9 +10,16 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  width: 100vw;
+  height: 100vh;
   background-image: url('./assets/images/journey-bg.jpg');
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center center;
+}
+
+@media only screen and (max-width: 767px) {
+
 }
 
 code {
