--- a/client/src/components/Question3/index.css
+++ b/client/src/components/Question3/index.css
@@ -17,6 +17,7 @@
     text-transform: uppercase;
     font-weight: bold;
     transition: ease-in-out .25s;
+    margin-top: 20px;
 }
 
 #nobudget:hover {
@@ -34,4 +35,5 @@
 #budgetinput {
     color: #29301e;
     border-radius: 0 15px 15px 0;
+    background-color: rgba(255,255,255, 0.6);
 }
