--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,6 +3,10 @@
   src: url('./assets/fonts/LadyNature.otf');
 }
 
+#q2 {
+  display: none;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
