--- a/client/src/index.css
+++ b/client/src/index.css
@@ -150,3 +150,10 @@ a {
 .section {
   margin-top: 20px;
 }
+
+.bg-q {
+  background-color: rgba(255,255,255, 0.2);
+  padding: 40px;
+  border: none;
+  border-radius: 50px;
+}
