--- a/client/src/components/Question1/index.css
+++ b/client/src/components/Question1/index.css
@@ -34,33 +34,45 @@ ul {
 }
 
 .next {
+    text-align: center;
     position: fixed;
     right: 20%;
     bottom: 45%;
-    background-color: lightskyblue;
+    background-color: #29301e;
     border: none;
     border-radius: 15px;
-    padding: 15px;
-    width: 100px !important;
+    padding: 10px;
+    width: 75px !important;
     transition: ease-in-out .25s;
     color: white;
     font-weight: bold;
 }
 
 .back {
+    text-align: center;
     position: fixed;
     left: 20%;
     bottom: 45%;
-    background-color: lightskyblue;
+    background-color: #29301e;
     border: none;
     border-radius: 15px;
-    padding: 15px;
-    width: 100px !important;
+    padding: 10px;
+    width: 75px !important;
     transition: ease-in-out .25s;
     color: white;
     font-weight: bolder;
 }
 
 .next:hover, .back:hover {
-    background-color: lightsteelblue;
+    background-color: rgba(41,48,30, .8)
+}
+
+i {
+    color: white !important;
+    margin: 0 !important;
+}
+
+i:hover {
+    text-decoration: none;
+    color: white!important;
 }
