css for all questions

--- a/client/src/components/Question1/index.css
+++ b/client/src/components/Question1/index.css
@@ -1,78 +1,5 @@
-.bgcolor {
-    background-color: #29301e;
-    border: none;
-    margin: 15px;
-    color: white;
-    transition: ease-in-out .25s;
-    border-radius: 15px;
-}
-
-.bgcolor:hover {
-    background-color: #98a685;
-
-}
-
-.bgcolor:focus {
-    background-color: #98a685 !important;
-
-}
-
-#loading, .suggestion-item, .suggestion-item--active {
-    margin-top: 20px;
-}
-
-.location-search-input {
-    margin-top: 50px;
-}
-
-ul {
-    list-style-type: none;
-}
-
-.address {
-    margin-top: 20px;
-}
-
-.next {
-    text-align: center;
-    position: fixed;
-    right: 20%;
-    bottom: 45%;
-    background-color: #29301e;
-    border: none;
-    border-radius: 15px;
-    padding: 10px;
-    width: 75px !important;
-    transition: ease-in-out .25s;
-    color: white;
+#autocomplete {
     font-weight: bold;
-}
-
-.back {
+    color: #566048;
     text-align: center;
-    position: fixed;
-    left: 20%;
-    bottom: 45%;
-    background-color: #29301e;
-    border: none;
-    border-radius: 15px;
-    padding: 10px;
-    width: 75px !important;
-    transition: ease-in-out .25s;
-    color: white;
-    font-weight: bolder;
-}
-
-.next:hover, .back:hover {
-    background-color: rgba(41,48,30, .8)
-}
-
-i {
-    color: white !important;
-    margin: 0 !important;
-}
-
-i:hover {
-    text-decoration: none;
-    color: white!important;
 }
