--- a/client/src/components/Question3/index.css
+++ b/client/src/components/Question3/index.css
@@ -1,43 +1,14 @@
-/* #q3 {
-    display: none;
-} */
-
-.budgetinput {
-    max-width: 200px;
-    margin: auto;
-}
-
-.budgetform {
-    margin-top: 50px;
-}
-
-#nobudget {
-    background-color: #29301e;
-    border: none;
-    border-radius: 15px;
-    color: white;
-    padding: 15px;
-    font-size: 10px;
-    text-transform: uppercase;
-    font-weight: bold;
-    transition: ease-in-out .25s;
-    margin-top: 20px;
-}
-
-#nobudget:hover {
-    background-color: #98a685;
-}
-
-.input-group-text {
-    background-color: #29301e !important;
-    color: white;
-    font-size: 12px;
-    font-weight: bold;
-    border-radius: 15px;
-}
-
 #budgetinput {
-    color: #29301e;
-    border-radius: 0 15px 15px 0;
+    margin-top: 10px;
+    color: #566048;
+    font-weight: bold;
+    width: 100px;
+    border-radius: 15px;
     background-color: rgba(255,255,255, 0.6);
+}
+
+.d-s {
+    font-weight: bold;
+    color: #566048;
+    padding-right: 5px;
 }
