--- a/client/src/components/Question2/index.css
+++ b/client/src/components/Question2/index.css
@@ -1,3 +1,35 @@
 #q2 {
     display: none;
 }
+
+#autocomplete {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    height: 50px;
+    border-radius: 15px;
+}
+
+p {
+    color: white;
+    font-weight: bold;
+    
+}
+
+#idk {
+    background-color: #29301e;
+    border: none;
+    border-radius: 15px;
+    color: white;
+    padding: 10px;
+    transition: ease-in-out .25s;
+    outline: none!important;
+}
+
+#idk:hover {
+    background-color: #98a685;
+}
+
+#idk:active, #idk:focus {
+    background-color: #98a685;
+    outline: none!important;
+}
