--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,17 +5,14 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
   width: 100vw;
   height: 100vh;
   background-image: url('./assets/images/journey-bg.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
+  font-family: 'Varela Round', sans-serif;
+  color: #566048 !important;;
 }
 
 /* @media only screen and (max-width: 600px) {
@@ -26,10 +23,10 @@ body {
 
 } */
 
-code {
+/* code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
+} */
 
 h1 {
   font-family: 'LadyNature', 'sans-serif';
@@ -37,15 +34,26 @@ h1 {
   font-size: 120px !important;
 }
 
-h3 {
-  font-family: 'LadyNature', sans-serif;
+h2 {
+  font-family: 'Varela Round', sans-serif;
   color: white;
-  font-size: 50px !important;
+  font-size: 60px !important;
+}
+
+h3 {
+  font-family: 'Varela Round', sans-serif;
+  color: white;
+  font-size: 30px !important;
 }
 
 .header {
   text-align: center;
-  margin-top: 10%;
+  margin-top: 30%;
+}
+
+.header-2 {
+  text-align: center;
+  margin-top: 10% !important;
 }
 
 #username {
@@ -157,8 +165,15 @@ a {
 .results {
   text-transform: uppercase;
   font-weight: bold;
+  color: #29301e;
 }
 
 .results-content {
   text-align: left;
+  color: #29301e;
+}
+
+.results-content p {
+  font-weight: normal;
+  color: #29301e;
 }
