getting lat lng for endpoint, calling places api on results

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -204,3 +204,10 @@ a {
     text-align: center;
   }
 }
+
+#placesmap {
+  height: 100% !important;
+  z-index:6;
+  position: fixed !important;
+  bottom: 2px;
+}
