--- a/client/src/index.css
+++ b/client/src/index.css
@@ -205,9 +205,18 @@ a {
   }
 }
 
-#placesmap {
-  height: 100% !important;
-  z-index:6;
+h5 {
+  color: white;
+}
+
+.r-h {
   position: fixed !important;
-  bottom: 2px;
+  width: 50% !important;
+  height: 75% !important;
+  overflow-y: scroll !important;
+  margin-top: 10% !important;
+  background-color: rgba(255,255,255, 0.2);
+  padding: 40px;
+  border: none;
+  border-radius: 50px;
 }
