--- a/client/src/index.css
+++ b/client/src/index.css
@@ -60,8 +60,8 @@ input {
   margin-top: 20px;
   border: none;
   border-radius: 12px;
-  background-color: #566048;
-  color: white;
+  background-color: white;
+  color:  #566048;
   transition: ease-in-out .25s;
   text-transform: uppercase;
   font-size: 12px;
@@ -72,6 +72,7 @@ input {
 
 .loginbtn:hover {
   background-color: rgba(86,96,72,.8);
+  color: white;
 }
 
 #signupText {
@@ -213,7 +214,7 @@ h5 {
   position: fixed !important;
   width: 50% !important;
   height: 75% !important;
-  overflow-y: scroll !important;
+  overflow-y: scroll;
   margin-top: 10% !important;
   background-color: rgba(255,255,255, 0.2);
   padding: 40px;
