formatting all documents, removing commented code

--- a/client/src/components/MobileNav/index.css
+++ b/client/src/components/MobileNav/index.css
@@ -13,3 +13,9 @@
     color: white!important;
     margin-top: 10px;
 }
+
+#myLinks i {
+    font-size: 20px !important;
+    padding-right: 10px;
+    padding-top: 5px;
+}
