--- a/client/src/index.css
+++ b/client/src/index.css
@@ -306,6 +306,15 @@ li {
   padding: 40px;
 }
 
+#pdfbutton {
+  position: fixed;
+  right: 0 !important;
+}
+
+#forPDF {
+  display: none;
+}
+
 /* MEDIA QUERIES */
 
 @media only screen and (max-width: 768px) {
