--- a/client/src/components/Question1/index.css
+++ b/client/src/components/Question1/index.css
@@ -5,10 +5,20 @@
     background-color: rgb(255,255,255);
 }
 
+.home-pg-2 {
+  width: 50%;
+  margin: auto !important;
+}
+
+.q-header {
+  margin-top: 30% !important;
+  text-align: center;
+}
+
 @media only screen and (max-width: 600px) {
     .home-pg-2 {
-      width: 100vw !important;
-      height: 75% !important;
+      width: 100%;
+      height: auto!important;
       text-align: center;
     }
 }
