--- a/client/src/components/PastTrip/index.css
+++ b/client/src/components/PastTrip/index.css
@@ -24,3 +24,16 @@
     padding: 40px;
     text-align:center;
   }
+
+#viewPDF {
+    border: none;
+    border-radius: 4px;
+    background-color: #29301e;
+    color: white;
+    transition: ease-in-out .25s;
+    padding: 5px;
+}
+
+#viewPDF:hover {
+    background-color: #758264;
+}
