--- a/client/src/index.css
+++ b/client/src/index.css
@@ -295,8 +295,11 @@ li {
 }
 
 .results-content h3 {
+  font-family: 'LadyNature';
+  font-size: 90px;
+  color: white;
   margin-top: 10%;
-  background-color: rgba(255,255,255, 0.6);
+  /* background-color: rgba(255,255,255, 0.6); */
   border-radius: 30px;
   padding: 40px;
 }
@@ -348,5 +351,8 @@ li {
   }
   .eachTrip {
     width: 100% !important;
+  }
+  .results-content h3 {
+    font-size: 60px;
   }
 }
