--- a/client/src/components/Question7/index.css
+++ b/client/src/components/Question7/index.css
@@ -4,9 +4,9 @@
     font-weight: normal;
 }
 
-/* input[type="checkbox"] {
+input[type="checkbox"] {
     visibility: hidden;
-} */
+}
   
 input[type="checkbox"] + label:before {
     border: 2px solid #566048;
@@ -33,5 +33,5 @@ input[type="checkbox"]:checked + label:after {
 }
   
 input[type="checkbox"]:focus + label::before {
-    outline: rgb(59, 153, 252) auto 5px;
+    outline: orange auto 5px;
 }
