--- a/client/src/components/Navbar/index.css
+++ b/client/src/components/Navbar/index.css
@@ -1,30 +1,34 @@
-i {
-    margin-right: 10px;
-    transition: ease-in-out .25s;
-  }
-  
-i:hover {
-  color: #29301e
-}
-
-.navstyles {
-  padding-top: 25px;
-}
-
 #nav {
   position: fixed;
+  top: 0;
   width: 100%;
   z-index: 5;
   text-align: center;
+  overflow: hidden;
+  background-color:rgba(41,48,30, .4);
 }
 
-.navstyle {
+#nav button {
+  display: inline-block;
+  color: white;
   text-align: center;
-  max-width: 50%;
-  margin: auto;
+  padding: 20px;
+  text-decoration: none;
+  outline:none!important;
+  transition: ease-in-out .25s;
+  font-size: 25px;
+}
+
+#nav button:hover {
+  color: #29301e;
 }
 
 .navbar-brand {
   border: none;
   background-color: transparent;
+}
+
+.cols-2 {
+  float: left;
+
 }
