--- a/client/src/components/MobileNav/index.css
+++ b/client/src/components/MobileNav/index.css
@@ -20,7 +20,7 @@
 #myLinks i {
     font-size: 20px !important;
     padding-right: 10px;
-    padding-top: 5px;
+    padding-top: 10px;
 }
 
 .icons {
@@ -30,6 +30,7 @@
     border-radius: 5px;
     color: white;
     padding: 5px;
+    margin-bottom: 5px !important;
     outline: none !important;
     transition: ease-in-out .25s;
 }
@@ -45,4 +46,12 @@
 
 .fa-bars:hover {
     color: white!important;
+}
+
+.fas {
+    padding-right: 20px !important;
+}
+
+#m-nav .mobile-nav-logo {
+    padding-top: 20px !important;
 }
