Ignored useEffect dependencies, styled tooltips, added text to circles component in home.js

--- a/client/src/components/Navbar/index.css
+++ b/client/src/components/Navbar/index.css
@@ -36,4 +36,6 @@
   background-color: #29301e !important;
   color: white !important;
   font-family: 'Varela Round', sans-serif;
+  padding: 7px !important;
+  border-radius: 10px !important;
 }
