--- a/client/src/components/MobileNav/index.css
+++ b/client/src/components/MobileNav/index.css
@@ -9,18 +9,20 @@
     z-index: 5;
     visibility: hidden;
     float: left;
+    background-color: rgba(117,130,100, .6);
+    padding: 12px;
+    border-radius: 5px;
 }
 
 .topnav {
     float: right;
     color: white!important;
-    margin-top: 10px;
+    position: absolute;
+    right: 20px;
 }
 
 #myLinks i {
     font-size: 20px !important;
-    padding-right: 10px;
-    padding-top: 10px;
 }
 
 .icons {
