--- a/client/src/index.css
+++ b/client/src/index.css
@@ -249,6 +249,10 @@ a {
   margin-top: 5%;
 }
 
+.results {
+  font-weight: bolder;
+}
+
 .placesList {
   text-align: center;
   margin: 50px auto!important;
